ver 1.0.2 - [New]Added Config File and Config GUI

--- a/src/main/resources/assets/clg/lang/en_US.lang
+++ b/src/main/resources/assets/clg/lang/en_US.lang
@@ -7,8 +7,8 @@ item.CLGHammer.name=Hammer
 itemGroup.clg=Compact Lava Generator
 tile.CLGController.notok.0=Not Activated!
 tile.CLGController.notok.1=How To Activate It:
-tile.CLGController.notok.2=1.Make the structure complete
-tile.CLGController.notok.3=2.Put it in Nether
-tile.CLGController.notok.4=3.Don't give it a redstone signal
+tile.CLGController.notok.2=-Make the structure complete
+tile.CLGController.notok.3=-Put it in Nether
+tile.CLGController.notok.4=-Don't give it a redstone signal
 tile.CLGController.info=Generating:%d,Storage:%d,Output:%d
 tile.CLGEnergyHatch.info=Unit:%s
