--- a/src/main/resources/assets/clg/lang/zh_CN.lang
+++ b/src/main/resources/assets/clg/lang/zh_CN.lang
@@ -7,8 +7,8 @@ item.CLGHammer.name=锤子
 itemGroup.clg=高级地热发电机
 tile.CLGController.notok.0=控制器未激活!
 tile.CLGController.notok.1=如何激活:
-tile.CLGController.notok.2=1.完整摆放多方块发电机
-tile.CLGController.notok.3=2.把发电机放在下界
-tile.CLGController.notok.4=3.不要给它红石信号
+tile.CLGController.notok.2=-完整摆放多方块发电机
+tile.CLGController.notok.3=-把发电机放在下界
+tile.CLGController.notok.4=-不要给它红石信号
 tile.CLGController.info=发电量:%d,存储:%d,输出:%d
 tile.CLGEnergyHatch.info=能量单位:%s
