ver 2.0.0: CHANGELOG: - [New] Now the Generator Module has particles - [New] Now the controller,generator module and the energy hatch can be rotated by using a buildcraft-compatible wrench - [New] Now the lava pump has a "Pipe" - [Fixed] Now you can't put 2 generator structures too close

--- a/src/main/resources/assets/clg/lang/en_US.lang
+++ b/src/main/resources/assets/clg/lang/en_US.lang
@@ -12,3 +12,4 @@ tile.CLGController.notok.3=-Put it in Nether
 tile.CLGController.notok.4=-Don't give it a redstone signal
 tile.CLGController.info=Generating:%d,Storage:%d,Output:%d
 tile.CLGEnergyHatch.info=Unit:%s
+tile.CLGController.cantplace=You realized that the generators won't work if the controllers are too close.
